--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,12 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 h1 {
-    margin: 0 !important;
+  margin: 0 !important;
 }
 
 .error {
-    color: red;
+  color: red;
+}
+.back-arrow {
+  position: absolute;
+  top: 80px;
+  left: 20px;
+  font-size: 2rem;
+  cursor: pointer;
+  user-select: none;
 }
