--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,18 +1,25 @@
 <div class="app">
-  <mat-toolbar color="primary" fxLayout="row" fxLayoutAlign="space-between center">
-    <span>Rental app</span>
-    <div *ngIf="$isLogged() | async; else notLogged">
-      <span routerLink="rentals" class="link">Rentals</span>
+  <mat-toolbar
+    *ngIf="router.url !== '/'"
+    class="custom-toolbar"
+    fxLayout="row"
+    fxLayoutAlign="space-between center"
+  >
+    <img src="assets/logo_p6.png" alt="logo" />
+
+    <div>
+      <!-- <span routerLink="rentals" class="link">Rentals</span>
       <span routerLink="me" class="link">Account</span>
-      <span (click)="logout()" class="link">Logout</span>
+      <span (click)="logout()" class="link">Logout</span> -->
     </div>
-    <ng-template #notLogged>
-      <div>
-        <span routerLink="login" class="link">Login</span>
-        <span routerLink="register" class="link">Register</span>
-      </div>
-    </ng-template>
   </mat-toolbar>
+  <div class="container" *ngIf="router.url === '/'">
+    <img src="assets/logo_p6.png" alt="logo" />
+    <div class="login-button">
+      <span routerLink="login" class="link">Login</span>
+      <span routerLink="register" class="link">Register</span>
+    </div>
+  </div>
   <div>
     <router-outlet></router-outlet>
   </div>
