--- a/front/src/app/features/auth/components/login/login.component.html
+++ b/front/src/app/features/auth/components/login/login.component.html
@@ -1,24 +1,26 @@
-<div class="login" fxLayout="row" fxLayoutAlign="center center">
-    <mat-card>
-        <mat-card-header fxLayoutAlign="center center">
-            <mat-card-title>Login</mat-card-title>
-        </mat-card-header>
-        <form class="login-form" [formGroup]="form" (ngSubmit)="submit()">
-            <mat-card-content fxLayout="column">
-                <mat-form-field fxFlex>
-                    <input matInput placeholder="Email" formControlName="email">
-                </mat-form-field>
-                <mat-form-field fxFlex>
-                    <input matInput [type]="hide ? 'password' : 'text'" placeholder="Password"
-                        formControlName="password">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                        [attr.aria-pressed]="hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                    </button>
-                </mat-form-field>
-            </mat-card-content>
-            <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Submit</button>
-            <p *ngIf="onError" class="error">An error occurred</p>
-        </form>
-    </mat-card>
+<div class="back-arrow" (click)="goBack()">←</div>
+<div class="login">
+  <h2 class="card-title">Se connecter</h2>
+
+  <form class="login-form" [formGroup]="form" (ngSubmit)="submit()">
+    <div class="form-group">
+      <label for="email">Email ou nom d'utilisateur</label>
+      <input id="email" type="text" formControlName="email" />
+    </div>
+
+    <div class="form-group">
+      <label for="password">Mot de passe</label>
+      <input
+        id="password"
+        [type]="hide ? 'password' : 'text'"
+        formControlName="password"
+      />
+    </div>
+
+    <button type="submit" class="btn" [disabled]="form.invalid">
+      Se connecter
+    </button>
+
+    <p *ngIf="onError" class="error">An error occurred</p>
+  </form>
 </div>
