--- a/front/src/app/features/auth/components/register/register.component.html
+++ b/front/src/app/features/auth/components/register/register.component.html
@@ -1,22 +1,25 @@
-<div class="register" fxLayout="row" fxLayoutAlign="center center">
-    <mat-card>
-        <mat-card-header fxLayoutAlign="center center">
-            <mat-card-title>Register</mat-card-title>
-        </mat-card-header>
-        <form class="register-form" [formGroup]="form" (ngSubmit)="submit()">
-            <mat-card-content fxLayout="column">
-                <mat-form-field fxFlex>
-                    <input matInput placeholder="Name" formControlName="name">
-                </mat-form-field>
-                <mat-form-field fxFlex>
-                    <input matInput placeholder="Email" formControlName="email">
-                </mat-form-field>
-                <mat-form-field fxFlex>
-                    <input matInput placeholder="Password" formControlName="password">
-                </mat-form-field>
-            </mat-card-content>
-            <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Submit</button>
-            <span *ngIf="onError" class="error">An error occurred</span>
-        </form>
-    </mat-card>
+<div class="back-arrow" (click)="goBack()">←</div>
+<div class="register">
+  <h2 class="card-title">Register</h2>
+
+  <form class="register-form" [formGroup]="form" (ngSubmit)="submit()">
+    <div class="form-group">
+      <label for="name">Nom</label>
+      <input id="name" type="text" formControlName="name" />
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input id="email" type="email" formControlName="email" />
+    </div>
+
+    <div class="form-group">
+      <label for="password">Mot de passe</label>
+      <input id="password" type="password" formControlName="password" />
+    </div>
+
+    <button type="submit" class="btn" [disabled]="form.invalid">Submit</button>
+
+    <span *ngIf="onError" class="error">An error occurred</span>
+  </form>
 </div>
