--- a/front/src/app/features/auth/components/login/login.component.html
+++ b/front/src/app/features/auth/components/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="back-arrow" (click)="goBack()">←</div>
+<img src="assets/logo_p6.png" alt="logo" class="login-logo mobile-only" />
 <div class="login">
   <h2 class="card-title">Se connecter</h2>
 
