--- a/front/src/app/features/auth/components/register/register.component.html
+++ b/front/src/app/features/auth/components/register/register.component.html
@@ -1,4 +1,6 @@
 <div class="back-arrow" (click)="goBack()">←</div>
+<img src="assets/logo_p6.png" alt="logo" class="login-logo mobile-only" />
+
 <div class="register">
   <h2 class="card-title">Register</h2>
 
