--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app">
   <mat-toolbar
-    *ngIf="router.url !== '/'"
+    *ngIf="showToolbar"
     class="custom-toolbar"
     fxLayout="row"
     fxLayoutAlign="space-between center"
@@ -13,7 +13,7 @@
       <span (click)="logout()" class="link">Logout</span> -->
     </div>
   </mat-toolbar>
-  <div class="container" *ngIf="router.url === '/'">
+  <div class="container" *ngIf="showToolbar">
     <img src="assets/logo_p6.png" alt="logo" />
     <div class="login-button">
       <span routerLink="login" class="link">Login</span>
