--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app">
+  <!-- toolbar -->
   <mat-toolbar
     *ngIf="showToolbar"
     class="custom-toolbar"
@@ -6,21 +7,17 @@
     fxLayoutAlign="space-between center"
   >
     <img src="assets/logo_p6.png" alt="logo" />
-
-    <div>
-      <!-- <span routerLink="rentals" class="link">Rentals</span>
-      <span routerLink="me" class="link">Account</span>
-      <span (click)="logout()" class="link">Logout</span> -->
-    </div>
   </mat-toolbar>
-  <div class="container" *ngIf="showToolbar">
+
+  <!-- container affiché seulement à la racine "/" -->
+  <div class="container" *ngIf="router.url === '/'">
     <img src="assets/logo_p6.png" alt="logo" />
     <div class="login-button">
       <span routerLink="login" class="link">Login</span>
       <span routerLink="register" class="link">Register</span>
     </div>
   </div>
-  <div>
-    <router-outlet></router-outlet>
-  </div>
+
+  <!-- ici seront injectées les routes (login, register, etc.) -->
+  <router-outlet *ngIf="router.url !== '/'"></router-outlet>
 </div>
