--- a/front/src/app/features/auth/components/login/login.component.html
+++ b/front/src/app/features/auth/components/login/login.component.html
@@ -1,27 +1,29 @@
-<div class="back-arrow" (click)="goBack()">←</div>
-<img src="assets/logo_p6.png" alt="logo" class="login-logo mobile-only" />
-<div class="login">
-  <h2 class="card-title">Se connecter</h2>
+<div class="container">
+  <div class="back-arrow" (click)="goBack()">←</div>
+  <img src="assets/logo_p6.png" alt="logo" class="login-logo mobile-only" />
+  <div class="login">
+    <h2 class="card-title">Se connecter</h2>
 
-  <form class="login-form" [formGroup]="form" (ngSubmit)="submit()">
-    <div class="form-group">
-      <label for="email">Email ou nom d'utilisateur</label>
-      <input id="email" type="text" formControlName="email" />
-    </div>
+    <form class="login-form" [formGroup]="form" (ngSubmit)="submit()">
+      <div class="form-group">
+        <label for="email">Email ou nom d'utilisateur</label>
+        <input id="email" type="text" formControlName="email" />
+      </div>
 
-    <div class="form-group">
-      <label for="password">Mot de passe</label>
-      <input
-        id="password"
-        [type]="hide ? 'password' : 'text'"
-        formControlName="password"
-      />
-    </div>
+      <div class="form-group">
+        <label for="password">Mot de passe</label>
+        <input
+          id="password"
+          [type]="hide ? 'password' : 'text'"
+          formControlName="password"
+        />
+      </div>
 
-    <button type="submit" class="btn" [disabled]="form.invalid">
-      Se connecter
-    </button>
+      <button type="submit" class="btn" [disabled]="form.invalid">
+        Se connecter
+      </button>
 
-    <p *ngIf="onError" class="error">An error occurred</p>
-  </form>
+      <p *ngIf="onError" class="error">An error occurred</p>
+    </form>
+  </div>
 </div>
