--- a/front/src/app/features/posts/posts.component.html
+++ b/front/src/app/features/posts/posts.component.html
@@ -1,12 +1,20 @@
+<div class="posts-header">
+  <button class="create-btn">Créer un article</button>
+
+  <div class="sort">
+    <div (click)="toggleSort()" class="sort-toggle">
+      <span>Trier par date</span>
+      <span class="arrow">{{ isAsc ? "↑" : "↓" }}</span>
+    </div>
+  </div>
+</div>
+
 <div class="posts-container">
   <div class="post-card" *ngFor="let post of posts">
     <h2 class="title">{{ post.title }}</h2>
     <div class="info">
       <p class="meta">Publié le {{ post.createdAt | date : "short" }}</p>
-      <p>
-        par
-        {{ post.userName }}
-      </p>
+      <p>par {{ post.userName }}</p>
     </div>
     <p class="content">{{ post.content }}</p>
   </div>
