--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,23 +1,1 @@
-<div class="app">
-  <!-- toolbar -->
-  <mat-toolbar
-    *ngIf="showToolbar"
-    class="custom-toolbar"
-    fxLayout="row"
-    fxLayoutAlign="space-between center"
-  >
-    <img src="assets/logo_p6.png" alt="logo" />
-  </mat-toolbar>
-
-  <!-- container affiché seulement à la racine "/" -->
-  <div class="container" *ngIf="router.url === '/'">
-    <img src="assets/logo_p6.png" alt="logo" />
-    <div class="login-button">
-      <span routerLink="login" class="link">Login</span>
-      <span routerLink="register" class="link">Register</span>
-    </div>
-  </div>
-
-  <!-- ici seront injectées les routes (login, register, etc.) -->
-  <router-outlet *ngIf="router.url !== '/'"></router-outlet>
-</div>
+<router-outlet></router-outlet>
