--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,5 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
 html,
 body {
   height: 100%;
@@ -12,11 +10,22 @@ body {
 h1 {
   margin: 0 !important;
 }
-
-.error {
-  color: red;
+//navbar//
+.app {
+  .link {
+    cursor: pointer;
+    font-size: 16px;
+    text-decoration: none;
+  }
 }
-
+.custom-toolbar {
+  background: white;
+  color: black;
+  border-bottom: 1px solid black;
+  img {
+    width: 100px;
+  }
+}
 .container {
   display: flex;
   flex-direction: column;
