--- a/front/src/app/layouts/app-layout/app-layout.component.scss
+++ b/front/src/app/layouts/app-layout/app-layout.component.scss
@@ -2,17 +2,21 @@
   display: flex;
   justify-content: space-between;
 }
+
 .routes {
   display: flex;
   gap: 1rem;
 }
+
 .logout-btn {
   color: red;
   font-size: 11px;
 }
+
 .active-link {
   color: #6c5ccf;
 }
+
 .profile-btn {
   background-color: #e0e0e0;
   border-radius: 50%;
@@ -28,9 +32,91 @@
 .profile-btn mat-icon {
   color: black;
 }
+
 .profile-btn.active-icon {
   border-color: #6c5ccf;
 }
+
 .profile-btn.active-icon mat-icon {
   color: #6c5ccf;
+}
+
+/* Burger button */
+.burger {
+  display: none;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  z-index: 3000;
+}
+
+/* Mobile menu */
+.mobile-menu {
+  display: flex;
+  flex-direction: column;
+  text-align: right !important;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 65vw;
+  background-color: #fff;
+  z-index: 2000;
+  padding: 2rem 1rem;
+  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+
+  &.open {
+    transform: translateX(0);
+  }
+
+  .mobile-link {
+    margin-top: 1.5rem;
+    text-align: right !important;
+    width: 100%;
+  }
+
+  button:not(.profile-btn) {
+    width: 100%;
+    text-align: left;
+    padding-left: 1rem;
+  }
+
+  /* Bouton profil mobile */
+  .profile-btn.mobile {
+    position: absolute;
+    bottom: 5rem;
+    right: 2rem;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e0e0e0;
+    border: 2px solid transparent;
+
+    mat-icon {
+      color: black;
+    }
+
+    &.active-icon {
+      border-color: #6c5ccf;
+      mat-icon {
+        color: #6c5ccf;
+      }
+    }
+  }
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .desktop-links {
+    display: none;
+  }
+
+  .burger {
+    display: inline-flex;
+  }
 }
