--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -48,6 +48,12 @@ h1 {
     margin: auto;
   }
 }
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
 .btn {
   width: 100%;
   padding: 12px;
@@ -59,14 +65,14 @@ h1 {
   border-radius: 6px;
   cursor: pointer;
 }
+.btn-small {
+  width: 50%;
+}
 .btn:disabled {
   background: #ccc;
   cursor: not-allowed;
 }
 
-.btn:hover:not(:disabled) {
-  background: #2c3e9d;
-}
 input {
   padding: 12px;
   font-size: 1rem;
@@ -78,4 +84,37 @@ input {
   color: red;
   margin-top: 1rem;
   text-align: center;
+}
+
+//cards ////
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 16px;
+  padding: 16px;
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+}
+.card {
+  border-radius: 12px;
+  background-color: #f5f5f5;
+  padding: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  .title {
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+
+  .meta {
+    font-size: 0.9rem;
+    color: gray;
+    margin-bottom: 12px;
+  }
+
+  .content {
+    font-size: 1rem;
+    line-height: 1.4;
+  }
 }
