--- a/front/src/app/features/posts/posts.component.scss
+++ b/front/src/app/features/posts/posts.component.scss
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: space-between;
 }
+.posts-list .card {
+  cursor: pointer;
+}
 
 .posts-header {
   display: flex;
