--- a/front/src/app/components/me/me.component.html
+++ b/front/src/app/components/me/me.component.html
@@ -4,24 +4,26 @@
 
     <div class="card-content">
       <form [formGroup]="form" (ngSubmit)="updateUser()" class="form">
-        <label class="form-group">
-          <span class="label">Nom</span>
-          <input type="text" formControlName="name" class="form-field" />
-        </label>
+        <input
+          type="text"
+          formControlName="name"
+          class="form-field"
+          placeholder="Username"
+        />
 
-        <label class="form-group">
-          <span class="label">Email</span>
-          <input type="email" formControlName="email" class="form-field" />
-        </label>
+        <input
+          type="email"
+          formControlName="email"
+          class="form-field"
+          placeholder="Email"
+        />
 
-        <label class="form-group">
-          <span class="label">Nouveau mot de passe</span>
-          <input
-            type="password"
-            formControlName="password"
-            class="form-field"
-          />
-        </label>
+        <input
+          type="password"
+          formControlName="password"
+          class="form-field"
+          placeholder="Nouveau mot de passe"
+        />
 
         <div class="btn-container">
           <button type="submit" class="btn btn-small" [disabled]="form.invalid">
@@ -40,11 +42,7 @@
             <h3 class="title">{{ theme.name }}</h3>
             <p class="description">{{ theme.description }}</p>
             <div class="btn-container">
-              <button
-                mat-raised-button
-                class="btn btn-small"
-                (click)="unsubscribe(theme.id)"
-              >
+              <button class="btn btn-small" (click)="unsubscribe(theme.id)">
                 Se désabonner
               </button>
             </div>
