--- a/front/src/app/components/me/me.component.scss
+++ b/front/src/app/components/me/me.component.scss
@@ -8,9 +8,9 @@
 
 .cards {
   width: 100%;
-  max-width: 640px;
   background: #ffffff;
   overflow: hidden;
+  padding: 20px;
   h1,
   h2 {
     justify-content: center;
@@ -22,6 +22,9 @@
   display: flex;
   flex-direction: column;
   gap: 14px;
+  width: 100%;
+  max-width: 640px;
+  margin: 30px auto;
 }
 
 .form-group {
@@ -42,9 +45,7 @@
 .form-field:focus {
   border-color: #6c5ccf;
 }
-.cards-container {
-  background-color: #6c5ccf;
-}
+
 @media (max-width: 480px) {
   .card {
     max-width: 95%;
