--- a/front/src/app/features/posts/posts.component.html
+++ b/front/src/app/features/posts/posts.component.html
@@ -11,8 +11,12 @@
   </div>
 </div>
 
-<div class="cards-container">
-  <div class="card" *ngFor="let post of posts">
+<div class="cards-container posts-list">
+  <div
+    class="card"
+    *ngFor="let post of posts"
+    [routerLink]="['/posts', post.id]"
+  >
     <h2 class="title">{{ post.title }}</h2>
     <div class="info">
       <p class="meta">Publié le {{ post.createdAt | date : "short" }}</p>
