--- a/front/src/app/features/post-detail/post-detail.component.scss
+++ b/front/src/app/features/post-detail/post-detail.component.scss
@@ -1,14 +1,30 @@
+.comments {
+  position: absolute;
+  top: 60px;
+}
 .comment-section {
   margin: auto;
+  padding: 20px;
   margin-top: 2rem;
-  padding-left: 20px;
+}
+.author {
+  display: flex;
+  gap: 30px;
 }
 .card {
   min-width: 300px;
+  max-width: 700px;
+  @media (max-width: 500px) {
+    min-width: 100px;
+  }
+}
+.post-container {
+  margin: auto;
+  padding: 20px;
 }
 .post-detail {
   margin: auto;
-  padding-left: 20px;
+  padding: 20px 50px;
 }
 .comments-container {
   display: flex;
@@ -28,6 +44,8 @@
 .comment-input input {
   flex: 1;
   padding: 10px;
+  max-width: 80%;
+  height: 2rem;
   border: 1px solid black;
   border-radius: 8px;
   outline: none;
